# YetAnotherVideoPlayer

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: README.md  kiss_fft_jni.cpp
app/src/main/res/drawable/: controls_vignette.xml  ic_cast_48px.xml  ic_closed_caption_48px.xml  ic_fast_forward_48px.xml  ic_fast_rewind_48px.xml  ic_high_quality_48px.xml  ic_info_outline_48px.xml  ic_jump_to.xml  ic_more_vert_48px.xml  ic_pause_48px.xml  ic_picture_in_picture_48px.xml  ic_placeholder_48px.xml  ic_play_arrow_48px.xml  ic_repeat_48px.xml  ic_replay_48px.xml  ic_screen_lock_landscape_48px.xml  ic_screen_lock_portrait_48px.xml  ic_screen_rotation_48px.xml  ic_settings_48px.xml  ic_shrug_black_48dp.xml  ic_touch_app_48px.xml  mediapicker_details_text_rounded.xml  play_pause_background.xml  seek_animation_l.xml  seek_animation_r.xml  seekr_00.xml  seekr_01.xml  seekr_02.xml  seekr_03.xml  seekr_04.xml  seekr_05.xml  seekr_06.xml  seekr_07.xml  seekr_08.xml  seekr_09.xml  seekr_10.xml  seekr_11.xml  seekr_12.xml  seekr_13.xml
app/src/main/res/layout/: activity_auto_pause_debug.xml  activity_crash_screen.xml  activity_launch.xml  activity_media_picker.xml  activity_playback.xml  activity_player_debug.xml  activity_video_test.xml  component_quick_settings_button.xml  crash_activity.xml  debug_activity.xml  layout_double_tap_seek_overlay.xml  layout_exo_controls.xml  layout_gesture_player_control_view.xml  layout_media_preview_view.xml  playback_activity.xml  (+16 more)
(+114 files in other folders)
